@@ -25,6 +25,8 @@
 
 #include <gtk/gtk.h>
 
+G_BEGIN_DECLS
+
 typedef struct _DhBase      DhBase;
 typedef struct _DhBaseClass DhBaseClass;
 
@@ -52,5 +54,7 @@ GtkWidget *  dh_base_get_window                      (DhBase *base);
 GtkWidget *  dh_base_get_window_on_current_workspace (DhBase *base);
 GNode *      dh_base_get_book_tree                   (DhBase *base);
 GList *      dh_base_get_keywords                    (DhBase *base);
+
+G_END_DECLS
 
 #endif /* __DH_BASE_H__ */
