@@ -24,9 +24,13 @@
 
 #include <glib.h>
 
-gboolean  dh_parser_read_file (const gchar  *path,
-			       GNode        *book_tree,
-			       GList       **keywords,
-			       GError      **error);
+G_BEGIN_DECLS
+
+gboolean dh_parser_read_file (const gchar  *path,
+                              GNode        *book_tree,
+                              GList       **keywords,
+                              GError      **error);
+
+G_END_DECLS
 
 #endif /* __DH_PARSER_H__ */
